Fixed minor error done by me in <script> tag for index.html file

--- a/week-11/index.html
+++ b/week-11/index.html
@@ -18,6 +18,6 @@
     </figure>
 
     <p>CSS positioning is totally easy! Why do people complain about it?</p>
-    <script type="text/css" src="modernizr.js"></script>
+    <script type="text/javascript" src="modernizr.js"></script>
   </body>
 </html>
